Fixed character view

--- a/fortune-rpg/Base.lproj/LaunchScreen.storyboard
+++ b/fortune-rpg/Base.lproj/LaunchScreen.storyboard
@@ -18,13 +18,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fortune-app-icon-1024" translatesAutoresizingMaskIntoConstraints="NO" id="P65-LZ-G6s">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fortune-app-icon-1024" translatesAutoresizingMaskIntoConstraints="NO" id="P65-LZ-G6s">
                                 <rect key="frame" x="65" y="211" width="245" height="245"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="245" id="4FN-CO-X4N"/>
+                                    <constraint firstAttribute="width" constant="245" id="8gF-n1-aSL"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="P65-LZ-G6s" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="8Y0-aS-t1J"/>
+                            <constraint firstItem="P65-LZ-G6s" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="dF4-v2-dLJ"/>
                             <constraint firstItem="P65-LZ-G6s" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="eNa-hD-uId"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
