--- a/fortune-rpg/Base.lproj/Main.storyboard
+++ b/fortune-rpg/Base.lproj/Main.storyboard
@@ -315,6 +315,18 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="180"/>
                                         <color key="backgroundColor" red="0.58823529409999997" green="0.34901960780000002" blue="0.16078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                                     </pickerView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ah4-qE-Shs">
+                                        <rect key="frame" x="8" y="34.5" width="58" height="27"/>
+                                        <color key="backgroundColor" red="0.58823529409999997" green="0.34901960780000002" blue="0.16078431369999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="14"/>
+                                        <inset key="contentEdgeInsets" minX="4" minY="4" maxX="4" maxY="4"/>
+                                        <state key="normal" title="Change">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="changeBtnPress:" destination="hs9-pk-Ikd" eventType="touchUpInside" id="lmb-l9-9Pf"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.32549019610000002" green="0.35294117650000001" blue="0.47058823529999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -329,12 +341,14 @@
                                     <constraint firstItem="YBc-Dq-JqR" firstAttribute="leading" secondItem="bAl-KQ-8UI" secondAttribute="leading" id="Rot-mw-pnb"/>
                                     <constraint firstAttribute="height" constant="180" id="SXA-Xm-MOl"/>
                                     <constraint firstAttribute="trailing" secondItem="aBt-Ad-nYe" secondAttribute="trailing" constant="8" id="UnH-up-t14"/>
+                                    <constraint firstItem="ah4-qE-Shs" firstAttribute="top" secondItem="LLt-JX-ouv" secondAttribute="bottom" constant="8" id="VL8-9F-PVB"/>
                                     <constraint firstItem="5jf-6b-4iK" firstAttribute="leading" secondItem="LLt-JX-ouv" secondAttribute="trailing" constant="8" id="YUh-2T-YUj"/>
                                     <constraint firstItem="0hY-Bm-30a" firstAttribute="top" secondItem="bAl-KQ-8UI" secondAttribute="top" constant="8" id="ZYY-JW-50Z"/>
                                     <constraint firstItem="oeA-RA-eCg" firstAttribute="leading" secondItem="ZXJ-o5-LrG" secondAttribute="trailing" constant="8" id="dLC-J5-bSI"/>
                                     <constraint firstItem="ZXJ-o5-LrG" firstAttribute="leading" secondItem="0hY-Bm-30a" secondAttribute="trailing" constant="16" id="dkb-Ou-mXU"/>
                                     <constraint firstItem="5jf-6b-4iK" firstAttribute="top" secondItem="bAl-KQ-8UI" secondAttribute="top" constant="8" id="gjW-3w-5GK"/>
                                     <constraint firstAttribute="trailing" secondItem="1gJ-jp-pWx" secondAttribute="trailing" constant="16" id="hjb-mh-jad"/>
+                                    <constraint firstItem="ah4-qE-Shs" firstAttribute="leading" secondItem="bAl-KQ-8UI" secondAttribute="leading" constant="8" id="muK-Gb-c1r"/>
                                     <constraint firstAttribute="bottom" secondItem="YBc-Dq-JqR" secondAttribute="bottom" id="qSJ-KV-34h"/>
                                     <constraint firstAttribute="trailing" secondItem="YBc-Dq-JqR" secondAttribute="trailing" id="vFf-9Z-XQP"/>
                                     <constraint firstItem="LLt-JX-ouv" firstAttribute="leading" secondItem="bAl-KQ-8UI" secondAttribute="leading" constant="8" id="wXG-IV-Kd2"/>
@@ -356,6 +370,7 @@
                         <viewLayoutGuide key="safeArea" id="GMr-x9-Fzt"/>
                     </view>
                     <connections>
+                        <outlet property="changeBtn" destination="ah4-qE-Shs" id="bLN-fr-fru"/>
                         <outlet property="dvalLbl" destination="oeA-RA-eCg" id="wYI-2m-I1m"/>
                         <outlet property="editingView" destination="bAl-KQ-8UI" id="CTl-UL-At3"/>
                         <outlet property="inputViewBottomLayout" destination="tjW-0h-NFS" id="6Et-Aw-3eb"/>
